# spr

./: .gitignore  book.toml  flake.nix  package.nix
spr/: Cargo.toml
spr/src/: main.rs
spr/src/commands/: init.rs
