[package]
name = "spr"
version = "1.3.6-beta.1"
authors = ["Sven Over <sven@cord.com>", "Jozef Mokry <jozef@cord.com>"]
description = "Submit pull requests for individual, amendable, rebaseable commits to GitHub"
repository = "https://github.com/getcord/spr"
homepage = "https://github.com/getcord/spr"
license = "MIT"
edition = "2021"
exclude = [".github", ".gitignore"]

[dependencies]
clap = { version = "^4.5", features = ["derive", "wrap_help"] }
console = "^0.15"
dialoguer = "^0.11"
futures = "^0.3"
futures-lite = "^2.3"
git2 = { version = "^0.17", default-features = false }
git2-ext = "0.6"
graphql_client = "^0.14"
indoc = "^2.0"
lazy-regex = "^3.3"
octocrab = { version = "^0.40", default-features = false, features = ["rustls", "default-client"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = "^1.0"
textwrap = "^0.16"
thiserror = "^1.0"
tokio = { version = "^1.40", features = ["macros", "process", "rt-multi-thread", "time"] }
unicode-normalization = "^0.1"
